tests/typecheck/fail/print_gn.gg
gn n() -> int {
    int i = 0;
    while (true) {
        yield i;
        i = i + 1;
    }
}
        
fn main() -> int {
    print(n);
    return 0;
}
